<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="PLmaker" translatable="false">Playlist maker</string>
    <string name="search" translatable="true">Поиск</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="media_gallery">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="shareAndroidDevLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="myEmail">aectanio@yandex.ru</string>
    <string name="dataFromTextEdit">dataFromTextEdit</string>
    <string name="mailto_prefix">mailto:</string>
    <string name="share_intent_type">text/plain</string>
    <string name="data_from_text_edit">dataFromTextEdit</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="connection_trouble">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="artworkimageviewbig">artworkImageViewBig</string>
    <string name="arrow_back">arrow_back</string>
    <string name="country">Страна</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="releaseDate">Год</string>
    <string name="collectionName">Альбом</string>
    <string name="trackTime">Длительность</string>
    <string name="search_history">Вы искали</string>
    <string name="zero_timer">00:00</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="search_bot_view">Поиск</string>
    <string name="library_bot_view">Медиатека</string>
    <string name="sett_bot_view">Настройки</string>
    <string name="playlist_name">Название*</string>
    <string name="new_pl">Новый плейлист</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="track">%d трек</string>
    <string name="tracks">%d трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="in_playlist">Добавлено в плейлист %s</string>
    <string name="not_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_zero">%d треков</string>
    <string name="pl_created">Плейлист %s создан</string>
    <string name="no_save_exit">Все несохраненные данные будут потеряны</string>
    <string name="exit_quest_end">Завершить создание плейлиста?</string>
    <string name="finish">Завершить</string>
    <string name="pl_edit">Редактировать информацию</string>
    <string name="pl_delete">Удалить плейлист</string>
    <string name="pl_info">%1$s · %2$s</string>
    <string name="pl_info_tracks"> · %2$s</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_track_in_pl">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="pl_delete_quest">Хотите удалить плейлист \«%1$s\»?</string>
    <string name="delete_track">Удалить трек</string>
    <string name="share_pl">Поделиться</string>
    <string name="pl_not_found">Плейлист не найден</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_track_quest">Хотите удалить трек?</string>
    <string name="pl_is_empty">В этом плейлисте нет треков</string>


</resources>