<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_back"
        android:padding="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/new_pl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pl"
        android:textSize="@dimen/sp19"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp24"
        android:layout_marginTop="@dimen/dp26"
        android:adjustViewBounds="true"
        android:background="@drawable/playlist_cover"
        android:contentDescription="@string/create_playlist"
        android:maxHeight="312dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/new_pl_text"
        app:srcCompat="@drawable/new_pl_img"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_box"
        style="@style/new_pl_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:hint="@string/playlist_name"
        app:cursorColor="@color/trackTint"
        app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start"
        app:layout_constraintTop_toBottomOf="@id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            style="@style/new_pl_textfield"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_box"
        style="@style/new_pl_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:hint="@string/playlist_description"
        app:cursorColor="@color/trackTint"
        app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            style="@style/new_pl_textfield"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp32"
        android:backgroundTint="@drawable/button_add_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/dp14"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textFontWeight="500"
        android:textSize="@dimen/sp16"
        app:cornerRadius="@dimen/dp8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@id/guideline_16dp_start" />

</androidx.constraintlayout.widget.ConstraintLayout>