<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard"
        android:layout_marginTop="14dp"
        android:text="@string/PLmaker"
        android:textFontWeight="500"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_primary_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:padding="@dimen/standard"
        android:layout_marginBottom="12dp"
        >

        <LinearLayout
            android:id="@+id/search_button"
            android:background="@drawable/rounded_button"
            style="@style/LinearLayoutAsButton"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:src="@drawable/search" />

            <TextView
                android:text="@string/search"
                style="@style/TextViewMainScreen"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mediateka"
            style="@style/LinearLayoutAsButton"
            android:background="@drawable/rounded_button"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:src="@drawable/mediateka" />

            <TextView
                android:text="@string/media_gallery"
                style="@style/TextViewMainScreen"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            style="@style/LinearLayoutAsButton"
            android:background="@drawable/rounded_button"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:src="@drawable/settings" />

            <TextView
                android:text="@string/settings"
                style="@style/TextViewMainScreen"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>


