<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/standard"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="4dp">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_horizontal|center_vertical"
                android:padding="@dimen/end_text_pad"
                android:paddingTop="@dimen/end_text_pad"
                android:paddingBottom="@dimen/end_text_pad"

                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="@dimen/end_text_pad"
                android:paddingTop="10dp"
                android:paddingBottom="@dimen/end_text_pad"
                android:text="@string/settings"
                android:textColor="@color/settings_text_changeable"
                android:textFontWeight="500"
                android:textSize="@dimen/standard_primary_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center">


            <TextView
                style="@style/TextViewSettings"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingVertical="@dimen/vertical_text_pad"
                android:paddingStart="@dimen/standard"
                android:text="@string/dark_theme"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/nightThemeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:paddingEnd="@dimen/end_text_pad" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RLSettings">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewSettings"
                android:text="@string/share" />

            <ImageView
                style="@style/ImageSettings"
                android:layout_marginEnd="3dp"
                android:src="@drawable/share" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendToSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RLSettings">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewSettings"
                android:text="@string/support" />

            <ImageView
                style="@style/ImageSettings"
                android:layout_marginEnd="2.9dp"
                android:src="@drawable/support"

                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/agreementView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RLSettings">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewSettings"
                android:text="@string/agreement" />

            <ImageView
                style="@style/ImageSettings"
                android:layout_marginEnd="5dp"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>