<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/LibraryTabs"
    tools:context=".player.ui.PlayerActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.fragment.app.FragmentContainerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_back"
            android:padding="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upperBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="26dp">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp">

        </androidx.constraintlayout.widget.Guideline>

        <ImageView
            android:id="@+id/artworkImageViewBig"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/artworkimageviewbig"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/trackNameTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/upperBorder"
            app:layout_constraintVertical_bias="0.5">

        </ImageView>


        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/player_straight"
            android:textSize="@dimen/standard_primary_text"
            app:layout_constraintBottom_toTopOf="@id/artistNameTextView"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>


        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/player_straight"
            android:textSize="@dimen/small_text14"
            app:layout_constraintBottom_toTopOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="200dp">

        </TextView>


        <ImageView
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/queue"
            app:layout_constraintBottom_toTopOf="@id/timer"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_one"
            android:src="@drawable/play"
            app:layout_constraintBottom_toTopOf="@id/timer"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/fav"
            app:layout_constraintBottom_toTopOf="@id/timer"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_one"
            android:layout_marginBottom="22dp"

            android:textColor="@color/player_straight"
            app:layout_constraintBottom_toTopOf="@+id/trackTime"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder">

        </TextView>

        <TextView
            android:id="@+id/trackTime"
            style="@style/textViewForPlayesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/trackTime"
            app:layout_constraintBottom_toTopOf="@id/collectionName"
            app:layout_constraintEnd_toStartOf="@id/trackTimeTextView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/trackTimeTextView"
            style="@style/textViewForPlayesRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:orientation="horizontal"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/collectionNameTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/trackTime"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/collectionName"
            style="@style/textViewForPlayesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/collectionName"
            app:layout_constraintBottom_toTopOf="@id/releaseDate"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/collectionNameTextView"
            style="@style/textViewForPlayesRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/releaseDate"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/releaseDate"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/releaseDate"
            style="@style/textViewForPlayesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/releaseDate"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@id/releaseDateTextView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/releaseDateTextView"
            style="@style/textViewForPlayesRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/releaseDate"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/genre"
            style="@style/textViewForPlayesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/primaryGenreName"
            app:layout_constraintBottom_toTopOf="@id/countryTextView"
            app:layout_constraintEnd_toStartOf="@id/genreTextView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/genreTextView"
            style="@style/textViewForPlayesRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/countryTextView"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/genre"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/country"
            style="@style/textViewForPlayesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="@id/lowerBorder"
            app:layout_constraintEnd_toStartOf="@+id/countryTextView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <TextView
            android:id="@+id/countryTextView"
            style="@style/textViewForPlayesRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/lowerBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintWidth_max="150dp">

        </TextView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lowerBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="12dp">

        </androidx.constraintlayout.widget.Guideline>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        app:behavior_hideable="true"
        app:behavior_peekHeight="600dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:id="@+id/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/line_for_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            app:layout_constraintStart_toEndOf="@+id/img"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/sp19" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp24"
            app:layout_constraintStart_toEndOf="@+id/text"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/create_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_14sp"
            app:cornerRadius="54dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_playlists_view"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_playlist_button"
            android:layout_height="100dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_playlist_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>